--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,8 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-
+    overflow: hidden;
+    position: fixed;
 
     background-color: var(--bg-blue);
 }
