--- a/css/instuction_screen.css
+++ b/css/instuction_screen.css
@@ -13,7 +13,7 @@
     background-color: white;
     box-shadow: 10px 10px #FFCF84;
     border-radius: 5px;
-    padding: 10px;
+    padding: 15px 0px;
 }
 
 h1{
@@ -25,10 +25,10 @@ p{
 }
 
 #instructions_details{
-    padding: 10px;
+    padding: 10px 0px;
     border-radius: 10px;
     background-color: white;
-    width: 85%;
+    width: 90%;
     text-align: center;
 }
 
