--- a/css/balloon.css
+++ b/css/balloon.css
@@ -65,7 +65,7 @@ img{
     touch-action: manipulation;
 }
 
-.instruc{
+/*.instruc{
     color: #263238;
     background-color: #e2e988;
     font-family: 'open_sanssemibold';
@@ -78,11 +78,136 @@ img{
     margin-top: 11%;
     padding: 5%;
     border-radius: 4px;
-}
+}*/
 
 .cards{
     text-align: center;
     margin-left: auto;
     margin-right:auto;
     margin-top: 20%;
+}
+
+.bubble-wobble {
+    -webkit-animation: bubbleWobble 0.5s ease;
+    -moz-animation: bubbleWobble 0.5s ease;
+    animation: bubbleWobble 0.5s ease;
+    background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 30%, rgba(255,255,255,1) 100%);
+    background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 30%,rgba(255,255,255,1) 100%);
+    background: radial-gradient(ellipse at center,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 30%,rgba(255,255,255,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 );
+}
+
+@-webkit-keyframes bubbleWobble {
+    0% {
+    -webkit-transform: scale(1);
+    }
+    20% {
+    -webkit-transform: scale(0.8);
+    }
+    40% {
+    -webkit-transform: scale(1.1);
+    }
+    60% {
+    -webkit-transform: scale(0.95);
+    } 
+    80% {
+    -webkit-transform: scale(1.03);
+    } 
+    100% {
+    -webkit-transform: scale(1);
+    } 
+}
+
+@-moz-keyframes bubbleWobble {
+    0% {
+    -moz-transform: scale(1);
+    }
+    20% {
+    -moz-transform: scale(0.8);
+    }
+    40% {
+    -moz-transform: scale(1.1);
+    }
+    60% {
+    -moz-transform: scale(0.95);
+    } 
+    80% {
+    -moz-transform: scale(1.03);
+    } 
+    100% {
+    -moz-transform: scale(1);
+    } 
+}
+
+@keyframes bubbleWobble {
+    0% {
+    transform: scale(1);
+    }
+    20% {
+    transform: scale(0.8);
+    }
+    40% {
+    transform: scale(1.1);
+    }
+    60% {
+    transform: scale(0.95);
+    } 
+    80% {
+    transform: scale(1.03);
+    } 
+    100% {
+    transform: scale(1);
+    } 
+}
+
+.bubble-pop {
+    -webkit-animation: bubblePop 0.4s ease;
+    -moz-animation: bubblePop 0.4s ease;
+    animation: bubblePop 0.4s ease;
+    opacity: 0;
+}
+
+@-webkit-keyframes bubblePop {
+    0% {
+    -webkit-transform: scale(1);
+    opacity: 1;
+    }
+    20% {
+    -webkit-transform: scale(0);
+    opacity: 0.6;
+    }
+    100% {
+    -webkit-transform: scale(0.5);
+    opacity: 0;
+    }
+}
+
+@-moz-keyframes bubblePop {
+    0% {
+    -moz-transform: scale(1);
+    opacity: 1;
+    }
+    20% {
+    -moz-transform: scale(0);
+    opacity: 0.6;
+    }
+    100% {
+    -moz-transform: scale(0.5);
+    opacity: 0;
+    }
+}
+
+@keyframes bubblePop {
+    0% {
+    transform: scale(1);
+    opacity: 1;
+    }
+    20% {
+    transform: scale(0);
+    opacity: 0.6;
+    }
+    100% {
+    transform: scale(0.5);
+    opacity: 0;
+    }
 }
