--- a/css/game_screen.css
+++ b/css/game_screen.css
@@ -39,6 +39,21 @@
     z-index: 10;
     bottom: 15%;
     pointer-events: none;
+    animation: pop 1.5s infinite;
+}
+
+@keyframes pop{
+    0%{
+        width: 15%;
+    }
+
+    50%{
+        width: 18%;
+    }
+
+    100%{
+        width: 15%;
+    }
 }
 
 #balloon{
