--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,8 @@ html, body {
 #splash_screen,
 #instruction_screen,
 #game_screen,
-#end_screen {
+#end_screen,
+#information_screen {
 
     width: 100%;
     height: 100%;
@@ -92,10 +93,21 @@ html, body {
     background-size: 100%;
 }
 
+#information_screen{
+    background-image: url("../img/information_screen/bottom5.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: 100%;
+
+    gap: 10px;
+    justify-content: flex-start !important;
+}
+
 #instruction_screen,
 #game_screen,
 #game_screen,
-#end_screen{
+#end_screen,
+#information_screen{
 
     display: flex;
     flex-direction: column;
