--- a/css/instuction_screen.css
+++ b/css/instuction_screen.css
@@ -26,7 +26,9 @@ p{
     text-align: center;
 }
 
-#play_button{
+#play_button,
+#next_button,
+#more_button{
     width: 90%;
     padding: 20px;
     border: 0px;
@@ -38,7 +40,7 @@ p{
     background-size: 100% 100%;
     position: absolute;
     
-    bottom: 6%;
+    bottom: 3%;
   
     left: 50%; /* position the left edge of the element at the middle of the parent */
 
