--- a/css/information_screen.css
+++ b/css/information_screen.css
@@ -21,7 +21,8 @@
 
 #info p{
     margin: 0;
-    font-weight: 100;
+    font-weight: 500;
+    font-size: 16px;
     color: var(--darkBlue);
     font-family: 'GothamBook';
 }
