--- a/css/information_screen.css
+++ b/css/information_screen.css
@@ -16,11 +16,11 @@
     text-align: center;
     color: var(--darkBlue);
     font-size: 25px;
-    margin: 0;
+    margin: 0px;
 }
 
 #info p{
-    margin: 0;
+    margin: 0px;
     font-weight: 500;
     font-size: 16px;
     color: var(--darkBlue);
@@ -39,5 +39,5 @@
 }
 
 #texts p{
-    margin: 0%;
+    margin: 0px;
 }
