--- a/css/information_screen.css
+++ b/css/information_screen.css
@@ -1,7 +1,18 @@
 #picture{
-    margin-top: -50px;
     width: 100%;
     height: auto;
+}
+
+.background{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 130px;
+    justify-content: center;
+    background: url(../img/information_screen/bottom5.png);
+    background-size: 100% 100%;
 }
 
 #info{
@@ -9,12 +20,12 @@
     text-align: left;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 25px;
 }
 
 #info h1{
-    text-align: center;
-    color: var(--darkBlue);
+    text-align: left;
+    color: var(--buttonText);
     font-size: 25px;
     margin: 0px;
 }
@@ -27,6 +38,10 @@
     font-family: 'GothamBook';
 }
 
+#moreSpace{
+    margin-top: 15px !important;
+}
+
 #details{
     display: flex;
     justify-content: flex-start;
@@ -36,4 +51,12 @@
 
 #details img{
     width: 10%;
+}
+
+#bottom{
+    position: absolute;
+    width: 100%;
+    z-index: inherit;
+    height: auto;
+    bottom: 0;
 }
