--- a/css/index.css
+++ b/css/index.css
@@ -164,3 +164,52 @@ html, body {
     visibility: hidden;
 }
 
+.rotate{
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+}
+
+@media (orientation:landscape) {
+    .rotate{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        visibility:visible;
+        top: 0;
+        text-align: center;
+        color: white;
+        width: 100%;
+        height: 100%;
+        z-index: 100;
+    }
+    .backgroundImage{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-image: url("../img/rotate/splashScreen.png");
+        background-color: rgba(0, 0, 0, 0.5);
+        background-size: 100% 100%;
+        /* Add the blur effect */
+        filter: blur(2px);
+        -webkit-filter: blur(2px);
+    }
+
+    .rotate h1{
+        z-index: 10000;
+        font-size: 20px;
+    }
+
+    .rotate img{
+        position: relative;
+        z-index: 10000;
+        width: 10%;
+        height: auto;
+    }
+}
+
