--- a/css/index.css
+++ b/css/index.css
@@ -183,21 +183,13 @@ html, body {
         visibility:visible;
         top: 0;
         text-align: center;
-        color: white;
+        color: #22555E;
         width: 100%;
         height: 100%;
         z-index: 100;
-    }
-    .backgroundImage{
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        background-image: url("../img/rotate/splashScreen.png");
-        background-color: rgba(0, 0, 0, 0.5);
-        background-size: 100% 100%;
-        /* Add the blur effect */
-        filter: blur(2px);
-        -webkit-filter: blur(2px);
+        background-image: url("../img/rotate/background.png");
+        background-size: cover;
+        background-color: #EAF6F8;
     }
 
     .rotate h1{
