--- a/css/bubble.css
+++ b/css/bubble.css
@@ -1,13 +1,13 @@
 .bubble{
     position: absolute;
     z-index: 10;
-    bottom: -50px;
+    top: 50%;
     background: transparent;
     border-radius: 50%;
 
     pointer-events: none;
     box-shadow: inset 0 0 10px #57ADB9;
-    animation: down 6s linear infinite;
+    animation: down 3s linear infinite;
 }
 
 .bubble::before{
@@ -29,7 +29,7 @@
         opacity: 1;
     }
     100%{
-        transform: translateY(-4000%);
+        transform: translateY(-2000%);
         opacity: 0;
     }
 }
