--- a/css/information_screen.css
+++ b/css/information_screen.css
@@ -11,8 +11,10 @@
     z-index: 10;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 35px;
     justify-content: flex-start;
+    background: url("../img/information_screen/bottom5.png") bottom no-repeat;
+    background-size: 100% 100%;
 }
 
 #info{
